--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1086,7 +1086,7 @@
   <data name="StereoFusion" xml:space="preserve">
     <value>쌍안경 융합</value>
   </data>
-  <data name="KBDetect" xml:space="preserve">
+  <data name="CharacterBrghtnessInsp" xml:space="preserve">
     <value>키보드 감지</value>
   </data>
   <data name="subPixelDetect" xml:space="preserve">
@@ -2570,5 +2570,59 @@
   </data>
   <data name="CurrentCurrentMA" xml:space="preserve">
     <value>현재 전류(mA)</value>
+  </data>
+  <data name="ImageCrop" xml:space="preserve">
+    <value>이미지 자르기</value>
+  </data>
+  <data name="FindCross" xml:space="preserve">
+    <value>교차 포지셔닝</value>
+  </data>
+  <data name="ColorCorrection" xml:space="preserve">
+    <value>색상 차이 보정</value>
+  </data>
+  <data name="EmittingAreaLocation" xml:space="preserve">
+    <value>발광 영역의 위치</value>
+  </data>
+  <data name="TemplateList" xml:space="preserve">
+    <value>템플릿 목록</value>
+  </data>
+  <data name="OpenFullEditor" xml:space="preserve">
+    <value>전체 편집기를 엽니다</value>
+  </data>
+  <data name="SelectTemplateToViewDetails" xml:space="preserve">
+    <value>세부 정보를 보려면 템플릿을 선택하세요.</value>
+  </data>
+  <data name="PleaseSelectTemplateToViewAndEdit" xml:space="preserve">
+    <value>보고 편집할 템플릿을 선택하세요.</value>
+  </data>
+  <data name="TemplateEdit" xml:space="preserve">
+    <value>템플릿 편집</value>
+  </data>
+  <data name="CurrentSelection" xml:space="preserve">
+    <value>현재 선택</value>
+  </data>
+  <data name="TemplatesCount" xml:space="preserve">
+    <value>주형</value>
+  </data>
+  <data name="TemplateEditorLoadFailed" xml:space="preserve">
+    <value>템플릿 편집기를 불러올 수 없습니다</value>
+  </data>
+  <data name="DefaultValueType" xml:space="preserve">
+    <value>기본값 유형</value>
+  </data>
+  <data name="ServiceRegistryCenterConfig" xml:space="preserve">
+    <value>서비스 레지스트리 구성</value>
+  </data>
+  <data name="ExportSucceeded" xml:space="preserve">
+    <value>내보내기 성공</value>
+  </data>
+  <data name="ConfirmReset" xml:space="preserve">
+    <value>재설정을 확인하세요</value>
+  </data>
+  <data name="ImportException" xml:space="preserve">
+    <value>가져오기 오류</value>
+  </data>
+  <data name="AvoidDeletionUnlessNecessary" xml:space="preserve">
+    <value>꼭 필요한 경우가 아니면 삭제하지 마세요. (삭제하고 싶으면 삭제하세요.)</value>
   </data>
 </root>
