--- a/UI/ColorVision.Solution/Properties/Resources.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.resx
@@ -271,4 +271,46 @@
   <data name="SolutionConfiguration" xml:space="preserve">
     <value>解决方案配置</value>
   </data>
+  <data name="UserCenter" xml:space="preserve">
+    <value>用户中心</value>
+  </data>
+  <data name="Username" xml:space="preserve">
+    <value>用户名</value>
+  </data>
+  <data name="Role" xml:space="preserve">
+    <value>角色</value>
+  </data>
+  <data name="PermissionMode" xml:space="preserve">
+    <value>权限模式</value>
+  </data>
+  <data name="LoginTime" xml:space="preserve">
+    <value>登录时间</value>
+  </data>
+  <data name="UserManagementSystem" xml:space="preserve">
+    <value>用户管理系统</value>
+  </data>
+  <data name="EditInfo" xml:space="preserve">
+    <value>编辑信息</value>
+  </data>
+  <data name="UserManagement" xml:space="preserve">
+    <value>用户管理</value>
+  </data>
+  <data name="Status" xml:space="preserve">
+    <value>状态</value>
+  </data>
+  <data name="LoginOrSwitch" xml:space="preserve">
+    <value>登录/切换</value>
+  </data>
+  <data name="Unknown" xml:space="preserve">
+    <value>未知</value>
+  </data>
+  <data name="WelcomeBack" xml:space="preserve">
+    <value>欢迎回来</value>
+  </data>
+  <data name="RememberLoginStatus7Days" xml:space="preserve">
+    <value>记住登录状态（7天内自动登录）</value>
+  </data>
+  <data name="NoAccountYet" xml:space="preserve">
+    <value>还没有账户？</value>
+  </data>
 </root>
