--- a/UI/ColorVision.UI/Properties/Resources.ko.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ko.resx
@@ -484,4 +484,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>취소</value>
   </data>
+  <data name="PropertyEditorWindow" xml:space="preserve">
+    <value>속성 편집기 창</value>
+  </data>
 </root>
