--- a/UI/ColorVision.UI/Properties/Resources.ru.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ru.resx
@@ -484,4 +484,7 @@
   <data name="Cancel" xml:space="preserve">
     <value>Отмена</value>
   </data>
+  <data name="PropertyEditorWindow" xml:space="preserve">
+    <value>PropertyEditorWindow</value>
+  </data>
 </root>
